{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Combat",
            "id": "d0c2acac-2bb6-4ebf-86b1-1aad36dab31d",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "0198878f-4509-444b-9ce0-a725d6d166a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b554add3-c91a-4871-89d7-50fe3ab54c01",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Movement",
            "id": "e9702583-3537-43c0-91f1-f7418ce2daf9",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "161c762c-da75-4f7f-b66e-82dbfc5dea57",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "d69d6316-eb7f-4ee5-8a3c-c48ef3e00e0b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "62cad921-3ca5-4695-9063-7ea2882ef33a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b58dd661-2f0b-4fd7-a308-e4697c932047",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "aad433a1-2b4a-4517-8cd1-f542b25de575",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2ff6c98b-9455-4ba0-bbfa-f24be25e2479",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}